# ga4bigquery

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: example_usage.py
src/ga4bigquery/: __init__.py  core.py
src/ga4bigquery/core/: __init__.py  _properties.py  client.py  dates.py  filters.py  group_by.py  helpers.py  properties.py  query_builders.py  query_helpers.py  request_events.py  request_funnel.py  sql.py  types.py
tests/: conftest.py  test_client_pivot.py  test_dates.py  test_e2e_public_sample.py  test_pivot_events_dataframe.py  test_pivot_funnel_dataframe.py  test_properties.py  test_public_api.py  test_smoke.py  test_sql_snapshots.py  test_types.py
