
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ga4bigquery"
version = "0.1.0"
description = "Lean GA4 BigQuery event + funnel querying"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "Your Name" }]
dependencies = [
    "pandas>=1.5",
    "google-cloud-bigquery>=3.13",
]

[project.urls]
Homepage = "https://github.com/your-org/ga4bigquery"
Repository = "https://github.com/your-org/ga4bigquery"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ga4bigquery*"]

[tool.ruff]
line-length = 100
