
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ga4bigquery"
version = "0.1.0"
description = "Lean GA4 BigQuery event + funnel querying"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "Your Name" }]
dependencies = [
    "pandas>=1.5",
    "google-cloud-bigquery>=3.13",
    "db-dtypes>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[project.urls]
Homepage = "https://github.com/hortemo/ga4bigquery"
Repository = "https://github.com/hortemo/ga4bigquery"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ga4bigquery*"]

[tool.ruff]
line-length = 100
